# hs-pearls

./: Color.hs  InteractWith.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  README.md  actions.hs  basicIO.hs  bytestring.hs  class.hs  divisible.hs  io-toupper.hs  json.hs  plus.hs  splitLines.hs  sum.hs  swapwords.hs
BloomFilter/: BloomCheck.hs  BloomFilter.hs  Easy.hs  Hash.hs  Internal.hs  Mutable.hs  liblookup3.dylib  performIO.hs  rwh-bloomfilter.cabal
barcode/: Barcode.hs  PNM.hs  Parse.hs
concurrent/: Sorting.hs  compressor.hs  fib.hs  hello.hs
conduit/: sample.hs
continuation/: foo.hs
dumblang/: AST.hs  Lexer.hs  parser.hs
exception/: div.hs  dynexc.hs  handle.hs  toupper.hs
filesearch/: BetterPredicate.hs  FoldDir.hs  RecursiveContents.hs  traverse.hs
fnmatch/: Glob.hs  GlobRegex.hs  Useful.hs
hashmap/: codemap.hs
ircbot/: IRC.hs
monad/: EitherTParse.hs  HandleIO.hs  Logger.hs  MonadHandle.hs  MonadHandleIO.hs  Random.hs  RandomSupply.hs  SafeHello.hs  Supply.hs  SupplyClass.hs  SupplyInstance.hs  WriterIO.hs
os/: io_sch.hs
pipes/: sample.hs
socket/: SyslogTypes.hs  syslogclient.hs  syslogserver.hs
template/: tutorial.hs
testing/: Prettify2.hs  quickcheck.hs
