Name:           rwh-bloomfilter
Version:        0.1
License:        BSD3
License-File:   License.txt
Category:       Data
Stability:      experimental
Build-Type:     Simple
Extra-Source-Files: lookup3.c

Cabal-Version: >= 1.2
Flag split-base
    Description: Has the base package been split up?
    Default: True
Flag bytestring-in-base
    Description: Is ByteString in the base or bytestring package?
    Default: False

Library
    if flag(bytestring-in-base)
        -- bytestring was in base-2.0 and 2.1.1
        Build-Depends: base >= 2.0 && < 2.2
    else
        -- in base 1.0 and 3.0, bytestring is a separate package
        Build-Depends: base < 2.0 || >= 3, bytestring >= 0.9

    if flag(split-base)
        Build-Depends: base >= 3.0, array
    else
        Build-Depends: base < 3.0

GHC-Prof-Options: -auto-all
C-Sources: lookup3.c
CC-Options: -O3
Includes:  lookup3.c
